--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "engines": {
-    "node": "16"
+    "node": ">= 18"
   },
   "scripts": {
     "start": "npm start"
